--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,12 +1,10 @@
-﻿@page
+@page
 @model IndexModel
-@{    
+@{
     ViewData["Title"] = "Home page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Gonzo gonzo .Net 6</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    <hr />
-    <div>Host operating system: @Model.OSVersion</div>
+    <h1 class="display-4">Welcome</h1>
+    <p>Hello, world! The time on the server is @DateTime.Now</p>
 </div>
